--- a/styles.css
+++ b/styles.css
@@ -82,6 +82,7 @@ button {
   border-radius: 5em;
   background-color: white;
   text-align: center;
+border: 0.15em solid transparent; 
 }
 
 button {
@@ -175,4 +176,6 @@ button {
     height: 100vh;
     padding: 25em;
   }
+ button { 
+        margin-bottom: 2.5em;
 }/*# sourceMappingURL=styles.css.map */
