--- a/styles.css
+++ b/styles.css
@@ -75,14 +75,14 @@ p {
 /* Buttons and Stuff */
 button {
   all: unset;
-  width: 70%;
+  width: 80%;
   height: 13%;
   margin-top: 2.5em;
   margin-bottom: 3em;
   border-radius: 5em;
   background-color: white;
   text-align: center;
-border: 0.15em solid transparent; 
+  border: 0.15em solid transparent;
 }
 
 button {
@@ -170,12 +170,16 @@ button {
   p {
     margin-bottom: 4em;
   }
+  button {
+    margin-bottom: 2.5em;
+  }
 }
 @media (min-width: 1600px) {
   body {
     height: 100vh;
     padding: 25em;
   }
- button { 
-        margin-bottom: 2.5em;
+  button {
+    margin-bottom: 2.5em;
+  }
 }/*# sourceMappingURL=styles.css.map */
